<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/profile_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_display"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryLight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/current_display"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryLight"
            android:text="loading..."
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="italic|bold"/>



        <TextView
            android:id="@+id/textView_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/quantum_black_100"
            android:text="@string/nickname_display"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/quantum_black_100"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="loading..." />

        <TextView
            android:id="@+id/textView_challengetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/quantum_black_100"
            android:gravity="center"
            android:text="Max Challenge Time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/editTextChallengeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/quantum_black_100"
            android:text="loading..." />

        <TextView
            android:id="@+id/textView_streak"
            android:textColor="@color/quantum_black_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/longest_Streak"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/StreakData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="loading..."
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView_pomoTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/quantum_black_100"
            android:text="@string/average_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/pomotimeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="loading..."
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView_TimeChall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_challenge"
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/timeChallData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/quantum_black_100"
            android:text="loading..."
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView_Won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/challenge_won"
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/WonData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="loading..."
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <TextView
            android:id="@+id/textView_longChall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/longest_challenge"
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/LongestChallData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="loading..."
            android:textColor="@color/quantum_black_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <Button
            android:id="@+id/name_save"
            style="?android:textAppearanceSmall"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Save"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/email_sign_out_button"
            style="?android:textAppearanceSmall"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Out"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>